# airflow_alibaba_provider

./: .gitignore  README.md  pyproject.toml
airflow_alibaba_provider/alibaba/cloud/hooks/: emr.py
airflow_alibaba_provider/alibaba/cloud/operators/: emr.py
tests/: ss_example.py
